--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0"
