--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       // ...
-      "baseUrl": ".",
+      "baseURL": ".",
       "paths": {
         "@/*": [
           "./src/*"
